--- a/food_redistribution/accounts/templates/accounts/about.html
+++ b/food_redistribution/accounts/templates/accounts/about.html
@@ -81,8 +81,11 @@
               in Dec 2022. He holds a B.S. in Electrical Engineer. 
             </div>
             <div class="mdl-card__actions mdl-card--border">
-              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% url 'accounts:login2' %}">
-                Login
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://github.com/HenryTseTse">
+                GitHub
+              </a>
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://www.linkedin.com/in/henrytse0112/">
+                LinkedIn
               </a>
             </div>
           </div>
