--- a/food_redistribution/accounts/templates/accounts/about.html
+++ b/food_redistribution/accounts/templates/accounts/about.html
@@ -96,11 +96,16 @@
 
             </div>
             <div class="mdl-card__supporting-text">
-              Mithra is...
+              Mithra is pursuing her graduate studies in CS at NYU Tandon(Jan '21 - Dec '22). She holds a 
+              Bachelor's degree in CS from Anna University, India (2017). She aims to learn more about cloud technologies in the future. 
             </div>
+
             <div class="mdl-card__actions mdl-card--border">
-              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% url 'accounts:login2' %}">
-                Login
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://github.com/MithraR">
+                GitHub
+              </a>
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://www.linkedin.com/in/mithra-sundaram/">
+                LinkedIn
               </a>
             </div>
           </div>
