About content updated

--- a/food_redistribution/accounts/templates/accounts/about.html
+++ b/food_redistribution/accounts/templates/accounts/about.html
@@ -131,12 +131,16 @@
           <div class="sri-card mdl-card mdl-shadow--8dp">
             <div class="sri-card-title mdl-card__title mdl-card--expand">
             </div>
-            <div class="mdl-card__supporting-text">
-              Sri is..
+            <div>
+              Sri is pursuing a Master's Degree in Computer Science at NYU Tandon, with a focus in Software Development. His expected graduation date is May 2023. 
+              He holds a B.Tech in Computer Science and Engineering from SRM University AP, India (2021).
             </div>
             <div class="mdl-card__actions mdl-card--border">
-              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% url 'accounts:login2' %}">
-                Login
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://github.com/sri-harsh">
+                GitHub
+              </a>
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://www.linkedin.com/in/sriharshtr/">
+                LinkedIn
               </a>
             </div>
           </div>
