--- a/food_redistribution/accounts/static/accounts/css/about.css
+++ b/food_redistribution/accounts/static/accounts/css/about.css
@@ -1,5 +1,10 @@
 body {
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('https://images.unsplash.com/photo-1616640674877-353706d6eb22?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url("https://images.unsplash.com/photo-1616640674877-353706d6eb22?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
   background-size: cover;
 }
 
@@ -59,7 +64,7 @@ body {
 }
 
 .iama {
-  font-family: 'Zen Kurenaido', sans-serif;
+  font-family: "Zen Kurenaido", sans-serif;
   font-size: 90px;
   color: white;
 }
@@ -70,37 +75,37 @@ body {
 }
 
 .smash-card-title.mdl-card__title {
-  background: url('https://images.unsplash.com/photo-1519052537078-e6302a4968d4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+  background: url("https://images.unsplash.com/photo-1519052537078-e6302a4968d4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
   height: 60vh;
 }
 
 .amber-card-title.mdl-card__title {
-  background: url('../images/Amber_Bowdoin_Pic.PNG') top 27% right 40%;
+  background: url("../images/Amber_Bowdoin_Pic.PNG") top 27% right 40%;
   height: 60vh;
 }
 
 .henry-card-title.mdl-card__title {
-  background: url('../images/Henry_Tse_Pic.jpg') top 27% right 40%;
+  background: url("../images/Henry_Tse_Pic.jpg") top 27% right 40%;
   background-size: contain;
   background-repeat: no-repeat;
   height: 60vh;
 }
 
 .mithra-card-title.mdl-card__title {
-  background: url('../images/mithra_edgecropped.jpg') top 27% right 40%;
+  background: url("../images/mithra_edgecropped.jpg") top 27% right 40%;
   background-size: contain;
   background-repeat: no-repeat;
   height: 60vh;
 }
 
 .satyen-card-title.mdl-card__title {
-  background: url('../images/satyensingh.jpg') top 27% right 40%;
+  background: url("../images/satyensingh.jpg") top 27% right 40%;
   background-size: contain;
   background-repeat: no-repeat;
   height: 60vh;
 }
 
 .sri-card-title.mdl-card__title {
-  background: url('https://images.unsplash.com/photo-1519052537078-e6302a4968d4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+  background: url("../images/sri.jpg") top 27% right 40%;
   height: 60vh;
 }
