--- a/food_redistribution/accounts/templates/accounts/about.html
+++ b/food_redistribution/accounts/templates/accounts/about.html
@@ -96,8 +96,8 @@
 
             </div>
             <div class="mdl-card__supporting-text">
-              Mithra is pursuing her graduate studies in CS at NYU Tandon(Jan '21 - Dec '22). She holds a 
-              Bachelor's degree in CS from Anna University, India (2017). She aims to learn more about cloud technologies in the future. 
+              Mithra is pursuing her graduate studies in CS at NYU Tandon(Jan '21 - Dec '22). She holds a
+              Bachelor's degree in CS from Anna University, India (2017). She aims to learn more about cloud technologies in the future.
             </div>
 
             <div class="mdl-card__actions mdl-card--border">
@@ -115,7 +115,7 @@
             <div class="satyen-card-title mdl-card__title mdl-card--expand ">
             </div>
             <div class="mdl-card__supporting-text">
-              Satyen is pursuing a Master's Degree in Computer Science at NYU Tandon, with a focus in Machine Learning and Deep Learning. His expected graduation date in December 2022. 
+              Satyen is pursuing a Master's Degree in Computer Science at NYU Tandon, with a focus in Machine Learning and Deep Learning. His expected graduation date in December 2022.
               He holds a B.S in Business and Technology Management from NYU Tandon (2021).
             </div>
             <div class="mdl-card__actions mdl-card--border">
@@ -132,8 +132,8 @@
           <div class="sri-card mdl-card mdl-shadow--8dp">
             <div class="sri-card-title mdl-card__title mdl-card--expand">
             </div>
-            <div>
-              Sri is pursuing a Master's Degree in Computer Science at NYU Tandon, with a focus in Software Development. His expected graduation date is May 2023. 
+            <div class="mdl-card__supporting-text">
+              Sri is pursuing a Master's Degree in Computer Science at NYU Tandon, with a focus in Software Development. His expected graduation date is May 2023.
               He holds a B.Tech in Computer Science and Engineering from SRM University AP, India (2021).
             </div>
             <div class="mdl-card__actions mdl-card--border">
