--- a/food_redistribution/cal/templates/cal/view_event.html
+++ b/food_redistribution/cal/templates/cal/view_event.html
@@ -50,10 +50,15 @@ Event
             Only the author may edit this event.
         {% endif %}
       {% else %}
-        <div class="mdl-card__title">
-          <h4>
-            Please log in to access this page.
-          </h4>
+      <div class="mdl-card__title">
+        <h4>
+          {{ event.title.value }}<br>
+        </h4>
+      </div>
+        <div class="user-pass-form mdl-card__supporting-text mdl-card--expand">
+          Description: {{ event.description.value }}<br>
+          Start: {{ event.start_time.value }}<br>
+          End: {{ event.end_time.value }}
         </div>
       {% endif %}
     </div>
