--- a/food_redistribution/food_avail/static/food_avail/css/post_food_avail.css
+++ b/food_redistribution/food_avail/static/food_avail/css/post_food_avail.css
@@ -3,62 +3,20 @@ body {
   background-size: cover;
 }
 
-.heading_container {
-  width: 100%;
-  height: 4vh;
-  color: white;
-  justify-content: center;
-}
-
-.mainbody_container {
-  width: 100%;
-  height: 4vh;
-  color: black;
-  width: 40%;
-  justify-content: center;
-}
-
-.button {
-  background-color: #4caf50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 15px;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-}
-
-.button1:hover {
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
-    0 17px 50px 0 rgba(0, 0, 0, 0.19);
-}
-
 .screen {
   width: 100vw;
   height: 80vh;
   display: flex;
-  /* position: relative; */
-  /* align-items: center; */
-  /* align-content: center; */
   justify-content: center;
 }
 
 .login-container {
-  /*position: fixed;*/
-  /*right: 30vw;
-  top: 15vh;*/
   display: flex;
   justify-content: center;
 }
 
 .iama {
-  font-family: "Zen Kurenaido", sans-serif;
+  font-family: 'Zen Kurenaido', sans-serif;
   font-size: 90px;
   color: white;
 }
@@ -75,7 +33,7 @@ body {
   justify-content: center;
   width: 512px;
   height: 80vh;
-  background-color: rgba(255, 255, 255, 0.92);
+  background-color: rgba(255,255,255,0.92);
 }
 
 .login-card-title {
@@ -84,6 +42,14 @@ body {
   display: flex;
   justify-content: center;
   /*padding-left: 30%;*/
+}
+
+.body-text.mdl-textfield {
+  width: 32vw;
+}
+
+.title-text.mdl-textfield {
+  width: 32vw;
 }
 
 .create-btn {
@@ -96,14 +62,6 @@ body {
   justify-content: center;
 }
 
-/*
-.reset-pass {
-  padding-left: 1.7em;
-}
-
-.new-user {
-  padding-left: 4.6em;
-}*/
 
 a {
   text-decoration: none;
@@ -114,10 +72,3 @@ a {
   display: flex;
   justify-content: center;
 }
-
-/*
-.error-message {
-  padding-top: 2em;
-  padding-left: 3em;
-  color: red;
-}*/
