--- a/food_redistribution/food_avail/templates/food_avail/post_food_avail.html
+++ b/food_redistribution/food_avail/templates/food_avail/post_food_avail.html
@@ -3,33 +3,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Availability</title>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="{% static 'food_avail/css/post_food_avail.css' %}" />
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Food Availability</title>
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="{% static 'accounts/css/material.min.css' %}"/>
+  <link rel="stylesheet" href="{% static 'accounts/css/newnav.css' %}">
+  <link rel="stylesheet" href="{% static 'food_avail/css/post_food_avail.css' %}" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
 
-	<!-- Material Design javascript --->
-	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <!-- Material Design javascript --->
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body>
-    
-
-    {% block title %}
-    {% endblock %}
+{%  include 'accounts/newnavbar.html' %}
 
     {% block content %}
+
+    <div class="screen">
+      <div class="login-container">
+        <div class="login-card mdl-card mdl-shadow--8dp">
+          {% if user.is_authenticated %}
+          <div class="login-card-title">
+            <h4>Food Availability</h4>
+          </div>
+          <div class="horizontal">
+            <div class="user-pass-form mdl-card__supporting-text">
+              <form method="POST">
+                {% csrf_token %}
+                <div class="title-text mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" required id="id_food_available" name="food_available"></input>
+                  <label class="mdl-textfield__label" for="id_food_available">MEALS AVAILABLE</label>
+                  <span class="mdl-textfield__error">Input must be a number.</span>
+                </div>
+                <div class="body-text mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                  <textarea class="mdl-textfield__input" type="text" rows= "3" id="id_description"
+                    name="description"></textarea>
+                  <label class="mdl-textfield__label" for="id_description">DESCRIPTION</label>
+                  <input type="hidden" name="author" value="1" id="id_author">
+                </div>
+                <div class="error-message">
+      						{% for message in messages %}
+      							<p id="messages">{{message}}</p>
+      						{% endfor %}
+      					</div>
+                <div class="create-btn">
+                  <input class="create mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" type="submit"
+                    value="Post Availability">
+                </div>
+              </form>
+            </div>
+          </div>
+          {% else %}
+            <div class="login-card-title">
+              <h4>Please log in to access this page.</h4>
+            </div>
+          {% endif %}
+        </div>
+
+    <!--
     <div class="clearfix">
     <a class="btn btn-info left" href="{% url 'accounts:profile' %}"> Go to Dashboard </a>
     </div>
     <main id="body-main">
         <div class="screen">
             <div class="login-container">
-              <div class="login-card mdl-card mdl-shadow--8dp">
+              <div class="login-card mdl-card mdl-shadow-8dp">
                 <div class="login-card-title">
                     <div class="mainbody_container">
                     <h1>Food Availability</h1>
@@ -48,8 +90,8 @@
                 <p id="messages">{{message}}</p>
             {% endfor %}
         </div>
-    </main>
+    </main>-->
     {% endblock %}
-    
+
 </body>
 </html>
