--- a/food_redistribution/accounts/static/accounts/css/update-prof.css
+++ b/food_redistribution/accounts/static/accounts/css/update-prof.css
@@ -1,21 +1,16 @@
 body {
-  /*background-color: rgba(0,0,0,0.8);*/
+  background-image: url('https://images.unsplash.com/photo-1498837167922-ddd27525d352?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+  background-size: cover;
 }
 
 .screen {
   width: 100vw;
-  height: 80vh;
+  height: 90vh;
   display: flex;
-  /* position: relative; */
-  /* align-items: center; */
-  /* align-content: center; */
   justify-content: center;
 }
 
 .login-container {
-  /*position: fixed;*/
-  /*right: 30vw;
-  top: 15vh;*/
   display: flex;
   justify-content: center;
 }
@@ -30,14 +25,13 @@ body {
   display: flex;
   justify-content: center;
   width: 100%;
-  /*padding-left: 18%*/
 }
 
 .login-card.mdl-card {
   display: flex;
   justify-content: center;
-  width: 60vw;
-  height: 80vh;
+  width: 70vw;
+  height: 90vh;
   background-color: rgba(255,255,255,0.92);
 }
 
@@ -59,15 +53,6 @@ body {
   justify-content: center;
 }
 
-/*
-.reset-pass {
-  padding-left: 1.7em;
-}
-
-.new-user {
-  padding-left: 4.6em;
-}*/
-
 a {
   text-decoration: none;
   color: blue;
@@ -77,10 +62,3 @@ a {
   display: flex;
   justify-content: center;
 }
-
-/*
-.error-message {
-  padding-top: 2em;
-  padding-left: 3em;
-  color: red;
-}*/
