--- a/food_redistribution/food_avail/static/food_avail/css/view_food.css
+++ b/food_redistribution/food_avail/static/food_avail/css/view_food.css
@@ -3,42 +3,111 @@ body {
   background-size: cover;
 }
 
-.heading_container {
-  width: 100%;
-  height: 4vh;
+.screen {
+  width: 100vw;
+  height: 80vh;
+  display: flex;
+  justify-content: space-around;
+}
+
+.login-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.iama {
+  font-family: 'Zen Kurenaido', sans-serif;
+  font-size: 90px;
   color: white;
+}
+
+.horizontal {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  /*padding-left: 18%*/
+}
+
+.vertical-stack {
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  float: left;
+}
+
+.add-slot-card.mdl-card {
+  display: flex;
+  justify-content: center;
+  width: 40vw;
+  height: 80vh;
+  background-color: rgba(255,255,255,0.92);
+}
+
+i.edit-icon {
+  color: navy;
+}
+
+i.delete-icon {
+  color: crimson;
+}
+
+.time-table.mdl-data-table {
+  width: 40vw;
+}
+
+.login-card.mdl-card {
+  display: flex;
+  justify-content: center;
+  width: 512px;
+  height: 80vh;
+  background-color: rgba(255,255,255,0.92);
+}
+
+.login-card-title {
+  width: 100%;
+  color: black;
+  display: flex;
+  justify-content: center;
+  /*padding-left: 30%;*/
+}
+
+.body-text.mdl-textfield {
+  width: 32vw;
+}
+
+.title-text.mdl-textfield {
+  width: 32vw;
+}
+
+.create-btn {
+  display: flex;
   justify-content: center;
 }
 
-.mainbody_container {
-  width: 100%;
-  height: 4vh;
-  margin-left: 2%;
-  color: white;
+.user-pass-form.mdl-card__supporting-text {
+  display: flex;
   justify-content: center;
 }
 
-.button {
-  background-color: #4caf50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
+.add-time-slot-div.mdl-card__supporting-text {
+  display: flex;
+  justify-content: center;
+  width: 40vw;
+}
+
+
+a {
   text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 15px;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
+  color: blue;
 }
 
-.button1:hover {
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
-    0 17px 50px 0 rgba(0, 0, 0, 0.19);
-}
-
-.msg_container {
-  color: white;
+.create.mdl-button--raised {
+  display: flex;
+  justify-content: center;
 }
