--- a/food_redistribution/food_avail/templates/food_avail/view_food_avail.html
+++ b/food_redistribution/food_avail/templates/food_avail/view_food_avail.html
@@ -15,6 +15,50 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 
+<div class="screen">
+  <div class="login-container">
+    {% for u in user_info %}
+      <div class="login-card mdl-card mdl-shadow--8dp">
+        <div class="login-card-title">
+          <h4>{{ u.author }}</h4>
+        </div>
+        <div class="vertical-stack">
+          <div class="description mdl-card__supporting-text">
+            Food Available: {{ u.food_available }}<br>
+            Description: {{ u.description }}<br>
+          </div>
+          <div class="table-area mdl-card__supporting-text">
+            {% if u.timeslot %}
+              {% for t in u.timeslot %}
+                <div class="table-responsive">
+                  <table class="time-table mdl-data-table mdl-js-data-table">
+                    <thead>
+                      <tr>
+                        <th>Start Time</th>
+                        <th>End Time</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>{{t.start_time | time:'H:i:s'}}</td>
+                        <td>{{t.end_time | time:'H:i:s'}}</td>
+                      </tr>
+                    </tbody>
+              {% endfor %}
+                  </table>
+                </div>
+              {% else %}
+                <p>{{ u.author }} has not posted any timeslots yet.</p>
+            {% endif %}
+          </div>
+        </div>
+    {% endfor %}
+      </div>
+  </div>
+</div>
+
+
+<!--
 <div>
     <div>
         <div>
@@ -48,13 +92,13 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                   
+
                                     <tr>
                                         <td>{{t.start_time | time:'H:i:s'}}</td>
                                         <td>{{t.end_time | time:'H:i:s'}}</td>
-                    
+
                                     </tr>
-                
+
                                 </tbody>
                                 {% endfor %}
                             </table>
@@ -67,4 +111,4 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
