new tagging feature to calendar

--- a/food_redistribution/cal/templates/cal/view_event.html
+++ b/food_redistribution/cal/templates/cal/view_event.html
@@ -37,6 +37,7 @@ Event
       </div>
         <div class="user-pass-form mdl-card__supporting-text mdl-card--expand">
           Description: {{ event.description.value }}<br>
+          Tag: {{event.category.value }}<br>
           Start: {{ event.start_time.value }}<br>
           End: {{ event.end_time.value }}
         </div>
