--- a/food_redistribution/cal/templates/cal/create_event.html
+++ b/food_redistribution/cal/templates/cal/create_event.html
@@ -29,6 +29,17 @@ Event
                 name="description">{{form.description}}</input>
               <label class="mdl-textfield__label" for="id_description">DESCRIPTION</label>
             </div>
+            <div class="mdl-selectfield mdl-js-selectfield mdl-selectfield--floating-label">
+              <select class="mdl-selectfield__select" id="id_category"
+                name="category">{{form.category}}
+                  <option value="event">event</option>
+                  <option value="donation">donation</option>
+                  <option value="volunteer">volunteer</option>
+                  <option value="discount">discount</option>
+                  <option value="free">free</option>
+              </select>
+              <label class="mdl-selectfield__select" for="id_category">TAG</label>
+            </div>
             <div class="">
               <input type="datetime-local" id="id_start_time" name="start_time">{{form.start_time}}</input>
             </div>
