Comment updated form

--- a/food_redistribution/accounts/templates/accounts/updateprofile.html
+++ b/food_redistribution/accounts/templates/accounts/updateprofile.html
@@ -17,7 +17,7 @@
 {%  include 'accounts/newnavbar.html' %}
 
 <!-- ORIGINAL FORM (with some styling) the form below doesn't work -->
-<!--
+
 <div class="screen">
   <div class="login-container">
     <div class="login-card mdl-card mdl-shadow--8dp">
@@ -40,10 +40,10 @@
       </div>
     </div>
   </div>
-</div>-->
+</div>
 
 <!-- THIS FORM DOES NOT SUBMIT ANYTHING IDK WHY-->
-<div class="screen">
+<!-- <div class="screen">
   <div class="login-container">
     <div class="login-card mdl-card mdl-shadow--8dp">
       <div class="login-card-title">
@@ -140,6 +140,6 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 {% endblock %}
