--- a/food_redistribution/food_avail/templates/food_avail/view_food_avail.html
+++ b/food_redistribution/food_avail/templates/food_avail/view_food_avail.html
@@ -18,7 +18,7 @@
 <div class="screen">
   <div class="login-container">
     {% for u in user_info %}
-      <div class="login-card mdl-card mdl-shadow--8dp">
+      <div>
         <div class="login-card-title">
           <h4>{{ u.author }}</h4>
         </div>
