--- a/food_redistribution/accounts/static/accounts/css/about.css
+++ b/food_redistribution/accounts/static/accounts/css/about.css
@@ -75,7 +75,8 @@ body {
 }
 
 .smash-card-title.mdl-card__title {
-  background: url("https://images.unsplash.com/photo-1519052537078-e6302a4968d4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+  background: url("../images/IMG_0088.jpg") bottom 15% right 40%;
+  background-size: cover;
   height: 60vh;
 }
 
