--- a/food_redistribution/accounts/templates/accounts/blogposts/update_post.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/update_post.html
@@ -15,27 +15,36 @@
   	<!-- Material Design javascript --->
   	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
-{% if user.is_authenticated %}
+
 <body>
-    <div class="mainbody_container">
-    {% if user.id == post.author.id %}
-        <h1> Edit a post here...</h1>
 
-        <form method = "POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p}}
-            <button class="button button1"> Update!</button>
+  <div class="screen">
+    <div class="login-container">
+      <div class="edit-post-card mdl-card mdl-shadow--8dp">
+        {% if user.is_authenticated %}
+          <div class="login-card-title">
+            <h4>Edit your post</h4>
+          </div>
+          {% if user.id == post.author.id %}
+            <div class="user-pass-form mdl-card__supporting-text">
+              <form method = "POST" enctype="multipart/form-data">
+                  {% csrf_token %}
+                  {{ form.as_p}}
+                  <button class="button button1"> Update!</button>
 
-
-        </form>
+              </form>
+            </div>
+          {% else %}
+              Only the author can edit this post!
+          {% endif %}
         {% else %}
-            Only the author can edit this post!
+          <div class="login-card-title">
+            <h4>Please log in to access this page.</h4>
+          </div>
         {% endif %}
+      </div>
     </div>
+  </div>
 </body>
-{% else %}
-
-    Please login to access this page!
-{% endif %}
 
 {% endblock %}
